--- a/exercise_00100_my_fakebook.html
+++ b/exercise_00100_my_fakebook.html
@@ -48,7 +48,7 @@
 
     <h2 class="h2">Weitere Informationen zu mir</h2>
 
-    <a href="https://de.wikipedia.org/wiki/Julia_Roberts">Mein Wikipedia-Beitrag</a>
+    <a href="https://de.wikipedia.org/wiki/Julia_Roberts" target="_blank">Mein Wikipedia-Beitrag</a>
 
 
 
