--- a/Boogle/googleloging.html
+++ b/Boogle/googleloging.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8"
     <title>Login | Google</title>
-    <link rel="stylesheet" type="text/css" href="google.css"
+    <link rel="stylesheet" type="text/css" href="google.css">
+    <meta name="robots" content="noindex" />
 
 </head>
 
